--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   api:
     build:
       context: ./api
+      dockerfile: Dockerfile
     container_name: nextdns_api
     env_file: ./config/.env
     ports:
