--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 flask==3.1.0
-flask-httpauth==4.8.0
+flask-cors==3.1.1
+Flask-httpauth==4.8.0
 sqlalchemy==2.0.37
 psycopg2-binary==2.9.10
 requests==2.32.3
