--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        id: buildx
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -37,22 +38,13 @@ jobs:
       - name: Set version-date tag
         id: tag
         run: |
-          VERSION="v1.0.0"  # Default version if no release tag is found
+          VERSION="v1.0.0"
           if [ ! -z "${{ github.event.release.tag_name }}" ]; then
             VERSION=${{ github.event.release.tag_name }}
           fi
           DATE_TAG=$(date +'%Y%m%d')
           VERSION_TAG="${VERSION}-${DATE_TAG}"
           echo "tag=${VERSION_TAG}" >> $GITHUB_ENV
-
-      - name: Cache pip dependencies (backend only)
-        if: matrix.service == 'backend'
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
 
       - name: Install dependencies (backend only)
         if: matrix.service == 'backend'
@@ -64,12 +56,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.${{ matrix.service }}  # Uses Dockerfile.backend or Dockerfile.frontend
+          file: ./Dockerfile.${{ matrix.service }}
           push: false
-          tags: maboni82/nextdns-optimized-analytics-${{ matrix.service }}:latest,
-                maboni82/nextdns-optimized-analytics-${{ matrix.service }}:${{ env.tag }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: |
+            maboni82/nextdns-optimized-analytics-${{ matrix.service }}:latest
+            maboni82/nextdns-optimized-analytics-${{ matrix.service }}:${{ env.tag }}
           builder: ${{ steps.buildx.outputs.name }}
 
       - name: Push Docker images to Docker Hub
@@ -78,7 +69,7 @@ jobs:
           context: .
           file: ./Dockerfile.${{ matrix.service }}
           push: true
-          tags: maboni82/nextdns-optimized-analytics-${{ matrix.service }}:latest,
-                maboni82/nextdns-optimized-analytics-${{ matrix.service }}:${{ env.tag }}
-          cache-from: type=gha
+          tags: |
+            maboni82/nextdns-optimized-analytics-${{ matrix.service }}:latest
+            maboni82/nextdns-optimized-analytics-${{ matrix.service }}:${{ env.tag }}
           builder: ${{ steps.buildx.outputs.name }}
