Refactor frontend Dockerfile to use Node.js for building and serve with Nginx

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,24 +1,14 @@
-# Use an official Python runtime as the base image
-FROM python:3.11-slim
+# file: Dockerfile.frontend
 
-# Set environment variables to ensure Python runs in an unbuffered and consistent mode
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+FROM node:20-slim as builder
 
-# Set the working directory inside the container
 WORKDIR /app
+COPY . .
 
-# Copy the application source code to the working directory
-COPY ./api /app
+RUN npm install && npm run build
 
-# Copy the requirements file to the working directory
-COPY ./requirements.txt /app/requirements.txt
+FROM nginx:alpine
+COPY --from=builder /app/public /usr/share/nginx/html
+EXPOSE 80
 
-# Install dependencies
-RUN pip install --no-cache-dir -r /app/requirements.txt
-
-# Expose the FRONTEND port
-EXPOSE 5000
-
-# Run the application
-CMD ["python", "app.py"]
+CMD ["nginx", "-g", "daemon off;"]
