--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,14 +1,15 @@
-# file: Dockerfile.frontend
-
 FROM node:20-slim as builder
 
 WORKDIR /app
 COPY . .
 
+# Pass the build arg into Astro's environment
+ARG PUBLIC_LOCAL_API_KEY
+ENV PUBLIC_LOCAL_API_KEY=$PUBLIC_LOCAL_API_KEY
+
 RUN npm install && npm run build
 
 FROM nginx:alpine
-COPY --from=builder /app/public /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
