--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,11 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^5.9.3"
+    "@astrojs/react": "^4.3.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "astro": "^5.9.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
