--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,8 +1,11 @@
 # .github/workflows/lint.yml
 
-name: Lint Code
+name: Lint Python Code
 
 on: [push, pull_request]
+
+permissions:
+  contents: read  # Minimal permissions recommended by GitHub
 
 jobs:
   lint:
@@ -21,10 +24,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
-          pip install pylint
+          pip install pylint pylint-extensions
 
       - name: Run Pylint
         run: |
-          # Add backend to PYTHONPATH so pylint can resolve imports
           export PYTHONPATH=$PYTHONPATH:./backend
-          pylint backend --rcfile=.pylintrc || true 
+          pylint backend --rcfile=.pylintrc || true
