--- a/.pylintrc
+++ b/.pylintrc
@@ -1,13 +1,8 @@
 [MASTER]
-init-hook='import sys; sys.path.append("./backend")'
 ignore=venv
+jobs=1
 load-plugins=
-    pylint.extensions.docparams,
-    pylint.extensions.logging,
-    pylint.extensions.typecheck
-
-[TYPECHECK]
-ignored-modules=requests,pytest
+    pylint.extensions.docparams
 
 [MESSAGES CONTROL]
 disable=
