--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -5,7 +5,7 @@ name: Lint Python Code
 on: [push, pull_request]
 
 permissions:
-  contents: read  # Minimal permissions recommended by GitHub
+  contents: read
 
 jobs:
   lint:
@@ -24,7 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
-          pip install pylint pylint-extensions
+          pip install pylint
 
       - name: Run Pylint
         run: |
