--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# NextDNS Optimized Analytics - .gitignore
+# BondIT-ApS standard .gitignore with Python, Docker, macOS, and IDE support
+# Like building a LEGO set - we only track the pieces that matter! 🧱
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -122,3 +126,117 @@ dmypy.json
 
 # Ignore dependencies
 node_modules
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.tmp
+*.temp
+
+# Linux
+*~
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+
+# JetBrains IDEs
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+.*.sw[a-p]
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+.docker/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+db_data/
+postgres_data/
+
+# Environment and configuration
+.env.local
+.env.development
+.env.test
+.env.production
+.env.staging
+config/.env.local
+config/.env.development
+config/.env.test
+config/.env.production
+config/.env.staging
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+
+# Security and secrets
+*.pem
+*.key
+*.cert
+*.crt
+secrets/
+
+# NextDNS specific
+*.nextdns
+nextdns_cache/
+
+# Alembic
+# Note: Keep migration files but ignore temp/cache
+alembic.ini.bak
+
+# Temporary and cache directories
+tmp/
+temp/
+cache/
+.cache/
+
+# OS generated files
+.Trashes
+.Spotlight-V100
+.TemporaryItems
+.fseventsd
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Network drives
+.apdisk
