✨ Enhance .env.template with logging configuration and data fetching interval settings

--- a/config/.env.template
+++ b/config/.env.template
@@ -34,18 +34,32 @@ PROFILE_ID=your_profile_id_here
 LOCAL_API_KEY=your_secure_local_api_key_here
 
 # =============================================================================
+# LOGGING CONFIGURATION
+# =============================================================================
+# Logging level - controls verbosity of application logs
+# DEBUG: Detailed information for debugging (development)
+# INFO: General information (production default)
+# WARNING: Only warning and error messages
+# ERROR: Only error messages
+# CRITICAL: Only critical errors
+LOG_LEVEL=INFO
+
+# =============================================================================
+# DATA FETCHING CONFIGURATION
+# =============================================================================
+# How often to fetch new DNS logs from NextDNS API (in minutes)
+# Default: 60 minutes (1 hour)
+# Minimum recommended: 15 minutes
+# Maximum recommended: 1440 minutes (24 hours)
+FETCH_INTERVAL=60
+
+# =============================================================================
 # OPTIONAL CONFIGURATION
 # =============================================================================
 # Uncomment and modify these if needed
 
 # Custom PostgreSQL port (default: 5432)
 # POSTGRES_PORT=5432
-
-# Development mode (set to 'true' for development)
-# FLASK_ENV=development
-
-# Log level (DEBUG, INFO, WARNING, ERROR)
-# LOG_LEVEL=INFO
 
 # =============================================================================
 # DOCKER SPECIFIC
@@ -59,11 +73,39 @@ LOCAL_API_KEY=your_secure_local_api_key_here
 # QUICK START GUIDE
 # =============================================================================
 # 1. Copy this file to .env: cp .env.template .env
-# 2. Edit .env with your actual values
+# 2. Edit .env with your actual values:
+#    - Set your NextDNS API_KEY and PROFILE_ID
+#    - Generate a secure LOCAL_API_KEY
+#    - Configure LOG_LEVEL (DEBUG for development, INFO for production)
+#    - Set FETCH_INTERVAL (minutes between data fetches)
 # 3. Get your NextDNS API key from: https://my.nextdns.io/account
 # 4. Find your Profile ID in your NextDNS profile URL
-# 5. Generate a secure LOCAL_API_KEY (use a password generator)
-# 6. Run: docker-compose up -d
-# 7. Initialize database: cd backend && python manage_db.py init
+# 5. Run: docker-compose up -d
+# 6. Initialize database: cd backend && python manage_db.py init
+# 7. Check health: curl http://localhost:5001/health
+# 8. View API docs: http://localhost:5001/docs
 # 
-# Need help? Check the docs/ folder or create an issue on GitHub!
+# 📚 Documentation: Check the docs/ folder for detailed guides
+# 🏥 Health monitoring: /health (simple) and /health/detailed (comprehensive)
+# 🔍 Interactive API docs: http://localhost:5001/docs
+# 
+# =============================================================================
+# NEW FEATURES IN v2.0
+# =============================================================================
+# ✨ FastAPI with automatic OpenAPI documentation
+# 📊 Enhanced logging with configurable levels and database statistics
+# ⏱️  Configurable data fetching intervals via FETCH_INTERVAL
+# 🏥 Comprehensive health monitoring with system resource tracking
+# 🖥️  Real-time server information (CPU, memory, disk, uptime)
+# 🎯 Type-safe API with Pydantic models and validation
+# 
+# Health Endpoints:
+#   GET /health          - Simple health check (status + healthy boolean)
+#   GET /health/detailed - Comprehensive system information
+# 
+# System Monitoring includes:
+#   • API and Database health status
+#   • Total DNS records count
+#   • CPU, memory, and disk utilization
+#   • Server platform and architecture info
+#   • Current configuration (log level, fetch interval)
