--- a/config/.env.template
+++ b/config/.env.template
@@ -53,6 +53,13 @@ LOG_LEVEL=INFO
 # Maximum recommended: 1440 minutes (24 hours)
 FETCH_INTERVAL=60
 
+# Number of DNS log records to fetch per API request
+# Default: 100 records per request
+# Minimum: 1 record
+# Maximum: 1000 records (NextDNS API limit)
+# Note: Larger values may increase memory usage and API response time
+FETCH_LIMIT=100
+
 # =============================================================================
 # OPTIONAL CONFIGURATION
 # =============================================================================
