--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,10 +1,31 @@
-FROM nginx:alpine
+# Build stage
+FROM node:18-alpine AS build
 
-# Copy static frontend files
-COPY . /usr/share/nginx/html
+WORKDIR /app
+
+# Copy package files
+COPY frontend/package*.json ./
+
+# Install dependencies
+RUN npm ci
+
+# Copy source code
+COPY frontend/ .
+
+# Build the application
+RUN npm run build
+
+# Production stage
+FROM nginx:alpine AS production
+
+# Copy built assets from build stage
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy nginx configuration
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy entrypoint script and make it executable
-COPY ./frontend/entrypoint.sh /entrypoint.sh
+COPY frontend/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 EXPOSE 80
