Update .env.template to support multiple NextDNS profile IDs

--- a/config/.env.template
+++ b/config/.env.template
@@ -21,10 +21,14 @@ POSTGRES_PORT=5432
 # Your NextDNS API key
 API_KEY=your_nextdns_api_key_here
 
-# Your NextDNS profile ID (found in the URL when viewing your profile)
-# Example: if your profile URL is https://my.nextdns.io/12345/setup
-# then your PROFILE_ID is 12345
-PROFILE_ID=your_profile_id_here
+# Your NextDNS profile IDs (comma-separated for multiple profiles)
+# Example: if your profile URLs are:
+#   https://my.nextdns.io/12345/setup (Home)
+#   https://my.nextdns.io/67890/setup (Work)
+# then your PROFILE_IDS would be: 12345,67890
+# Single profile: PROFILE_IDS=12345
+# Multiple profiles: PROFILE_IDS=12345,67890,abcdef
+PROFILE_IDS=your_profile_ids_here
 
 # =============================================================================
 # APPLICATION AUTHENTICATION (Required)
@@ -81,7 +85,7 @@ FETCH_LIMIT=100
 # =============================================================================
 # 1. Copy this file to .env: cp .env.template .env
 # 2. Edit .env with your actual values:
-#    - Set your NextDNS API_KEY and PROFILE_ID
+#    - Set your NextDNS API_KEY and PROFILE_IDS (comma-separated)
 #    - Generate a secure LOCAL_API_KEY
 #    - Configure LOG_LEVEL (DEBUG for development, INFO for production)
 #    - Set FETCH_INTERVAL (minutes between data fetches)
