--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+# Ignore Python package lib directories but not frontend source lib
+/lib/
 lib64/
 parts/
 sdist/
