--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -18,6 +18,9 @@ RUN npm run build
 # Production stage
 FROM nginx:alpine AS production
 
+# Install curl for healthcheck
+RUN apk add --no-cache curl
+
 # Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
@@ -27,6 +30,10 @@ COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 # Copy entrypoint script and make it executable
 COPY frontend/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+
+# Add healthcheck
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost/ || exit 1
 
 EXPOSE 80
 
