chore: Update .gitignore to exclude TypeScript and Vite generated files
- Add *.tsbuildinfo and specific generated files to .gitignore
- Remove tracked generated files that should not be in version control
- Ensure consistent build artifact exclusion across development environments

--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,12 @@ build/
 
 # React/TypeScript cache
 .tsbuildinfo
+*.tsbuildinfo
+frontend/tsconfig.node.tsbuildinfo
+
+# Vite generated files
+frontend/vite.config.js
+frontend/vite.config.d.ts
 
 # Package manager lock files (keep package-lock.json but ignore yarn.lock)
 yarn.lock
