--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,8 @@ apscheduler==3.11.1
 
 # System monitoring
 psutil==7.1.3
+
+# Authentication and security
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
+slowapi==0.1.9
