🧱 Add web interface authentication configuration options to .env.template

--- a/config/.env.template
+++ b/config/.env.template
@@ -38,6 +38,35 @@ PROFILE_IDS=your_profile_ids_here
 LOCAL_API_KEY=your_secure_local_api_key_here
 
 # =============================================================================
+# WEB INTERFACE AUTHENTICATION (Optional)
+# =============================================================================
+# Enable/disable web interface authentication
+# If disabled (false), no login is required to access the web interface
+# If enabled (true), users must login with username and password
+AUTH_ENABLED=false
+
+# Username for web interface login (default: admin)
+# Only used when AUTH_ENABLED=true
+AUTH_USERNAME=admin
+
+# Password for web interface login
+# You can use a plain password here - it will be handled securely
+# Example: AUTH_PASSWORD=LegoRocks
+# Only used when AUTH_ENABLED=true
+AUTH_PASSWORD=LegoRocks
+
+# Secret key for JWT token signing
+# Generate a secure random string (at least 32 characters)
+# You can generate one with: openssl rand -hex 32
+# Only used when AUTH_ENABLED=true
+AUTH_SECRET_KEY=your-secret-key-min-32-chars-change-in-production
+
+# Session timeout in minutes (default: 60)
+# How long a user stays logged in before needing to login again
+# Only used when AUTH_ENABLED=true
+AUTH_SESSION_TIMEOUT=60
+
+# =============================================================================
 # LOGGING CONFIGURATION
 # =============================================================================
 # Logging level - controls verbosity of application logs
