--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,7 @@ frontend/tsconfig.tsbuildinfo
 
 # Bandit reports
 *bandit-report.json
+
+# Safety checks
+.safety-policy.yml
+.safety-project.ini
