✨ Add secure database migration script with environment variables
- Renamed migrate-to-do.sh to migrate-to-new-db.sh for clarity
- Replaced hardcoded credentials with environment variables
- Added .env.migration.template for safe credential management
- Fixed fetch_status migration to handle duplicate keys gracefully
- Improved error handling with ON CONFLICT clauses
- Added environment variable validation before script execution
- Set default truncate option to 'no' for safety
- Created comprehensive README.md in scripts directory
- Updated .gitignore to exclude .env.migration file

--- a/.gitignore
+++ b/.gitignore
@@ -228,6 +228,9 @@ config/.env.staging
 # .env.template should be tracked
 !config/.env.template
 
+# Migration script environment files
+scripts/.env.migration
+
 # Keep template files but ignore actual Portainer stack file
 portainer-stack.yml
 !portainer-stack.yml.template
