--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -107,6 +107,50 @@
             "problemMatcher": []
         },
         {
+            "label": "🧪 Backend: Run All Tests",
+            "type": "shell",
+            "command": "cd backend && pytest tests/ -v",
+            "group": "test",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "🧪 Backend: Test with Coverage",
+            "type": "shell",
+            "command": "cd backend && pytest tests/ --cov=. --cov-report=html --cov-report=term -v",
+            "group": "test",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "🧪 Frontend: Run All Quality Checks",
+            "type": "shell",
+            "command": "cd frontend && echo '🧪 1/5: Testing...' && npm run test -- --run && echo '🎨 2/5: Linting...' && npm run lint && echo '✨ 3/5: Formatting...' && npm run format && echo '🔧 4/5: Type checking...' && npm run type-check && echo '📊 5/5: Coverage...' && npm run test:coverage && echo '✅ Frontend checks passed!'",
+            "group": "test",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "🧪 Backend: Run All Quality Checks",
+            "type": "shell",
+            "command": "cd backend && echo '🧪 1/3: Testing...' && pytest tests/ -v && echo '📊 2/3: Coverage...' && pytest tests/ --cov=. --cov-report=term && echo '🐍 3/3: Linting...' && black . --check && pylint . && echo '✅ Backend checks passed!'",
+            "group": "test",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "problemMatcher": []
+        },
+        {
             "label": "🔍 Lint Frontend (ESLint)",
             "type": "shell",
             "command": "cd frontend && npm run lint",
